--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: FIESTA
 Title: Factorization-based Inferred Expression Single-cell Transcriptomic Analysis (FIESTA)
 Version: 1.1.3
-Authors@R: 
+Authors@R: c(
     person(given = "Elnaz",
            family = "Mirzaei Mehrabad",
            role = c("aut", "cre"),
            email = "e.mirzaei.m@gmail.com"),
            person(given = "Benjamin", family = "Spike", email = "benjamin.spike@hci.utah.edu", 
-        role = c("aut", "cre")))
+        role = c("aut")))
 Description: A non-negative matrix factorization approach to impute missing values in single-cell RNAseq data sets.
 License: GPL-2
 Encoding: UTF-8
